# timeweb-api-acme-dns-sidecar

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  pyproject.toml
src/: main.py
src/app/domain/: acme_dns_update.py  auth.py  cbv.py  db.py
src/app/services/: auth_simple.py  database_tinydb.py  tw_acme_dns_update.py  tw_api.py
src/app/views/: acme_dns_update.py  health_check.py
src/setup/: app_factory.py  dependencies.py  logging.py  settings.py
