[tool.poetry]
name = "timeweb-api-acme-dns-sidecar"
version = "0.1.0"
description = ""
authors = ["nm101 <melnikovsm2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
