[tool.poetry]
name = "timeweb-api-acme-dns-sidecar"
version = "0.1.0"
description = ""
authors = ["nm101 <melnikovsm2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
aiotinydb = ">=2.0.0,<2.1.0"
pydantic-settings = ">=2.1.0,<2.2.0"
aiohttp = ">=3.9.1,<3.10.0"


[tool.poetry.group.dev.dependencies]
black = ">=23.12.1,<23.13.0"
isort = ">=5.13.2,<5.14.0"
flake8 = ">=6.1.0,<6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
